--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -73,6 +73,11 @@ body {
   box-shadow: none; 
 }
 
+.currentRound {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
   @media (max-width: 900px) {
     .logo {
     margin-top: 90px;
